<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/menu_update_prices"
        android:icon="?attr/ic_action_download"
        android:title="@string/update_prices"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_export_prices"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/export_prices"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_purge_history"
        android:icon="@null"
        android:title="@string/purge_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_change_provider"
        android:title="@string/change_provider" />
</menu>