<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal" >

    <com.vanluom.group11.quanlytaichinhcanhan.view.RobotoTextView
        android:id="@+id/categoryTextView"
        android:layout_width="0dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/category" />

    <com.vanluom.group11.quanlytaichinhcanhan.view.RobotoTextView
        android:id="@+id/frequencyTextView"
        android:layout_width="wrap_content"
        android:minWidth="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/frequency" />

    <com.vanluom.group11.quanlytaichinhcanhan.view.RobotoTextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:minWidth="60dp"
        android:paddingLeft="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center_vertical|end"
        android:text="@string/amount" />

    <com.vanluom.group11.quanlytaichinhcanhan.view.RobotoTextView
        android:id="@+id/actualTextView"
        android:layout_width="wrap_content"
        android:minWidth="60dp"
        android:paddingLeft="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="center_vertical|end"
        android:text="@string/actual" />

</LinearLayout>